--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         if (window.innerWidth <= 768) {
           window.location.href = "mobiledashboard.html"; // ✅ Mobile view
         } else {
-          window.location.href = "daashboard.html"; // ✅ Desktop view
+          window.location.href = "dashboard.html"; // ✅ Desktop view
         }
       }, 2000);
     } else {
