--- a/dashboard.html
+++ b/dashboard.html
@@ -2,75 +2,16 @@
 <html lang="en">
 <head>
   <script>
-    // Redirect mobile users
-    if (window.innerWidth <= 768) {
-      window.location.href = 'mobiledashboard.html';
-    }
-  </script>
+  // Check if the device is mobile
+  if (window.innerWidth <= 768) {
+    window.location.href = 'mobiledashboard.html';
+  }
+</script>
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Staff Portal - Dashboard</title>
   <link rel="stylesheet" href="dashboardsidebar.css" />
-
-  <style>
-    /* --- Modal Styles --- */
-    .modal-overlay {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-
-    .modal {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 600px;
-      width: 90%;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-      animation: fadeIn 0.3s ease-in-out;
-    }
-
-    .popup-content {
-      max-height: 400px;
-      overflow-y: auto;
-    }
-
-    .popup-table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    .popup-table td {
-      padding: 8px 10px;
-      border: 1px solid #ccc;
-    }
-
-    .close-btn {
-      background: crimson;
-      color: white;
-      padding: 6px 12px;
-      border: none;
-      float: right;
-      border-radius: 6px;
-      cursor: pointer;
-      margin-bottom: 10px;
-    }
-
-    .highlight-field {
-      background-color: #d1f2eb;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
 </head>
 <body>
 
@@ -109,7 +50,7 @@
     </div>
   </nav>
 
-  <!-- Page Title -->
+  <!-- Page Titles -->
   <header class="page-header">
     <h1>MOUNT ZION MEDICAL COLLEGE</h1>
     <p>Staff Portal</p>
@@ -121,15 +62,6 @@
     <p>This is the dashboard content.</p>
   </div>
 
-  <!-- Modal Overlay for Detail Popup -->
-  <div class="modal-overlay" id="detailPopup">
-    <div class="modal">
-      <button class="close-btn">Close</button>
-      <div class="popup-content"></div>
-    </div>
-  </div>
-
-  <!-- JavaScript File -->
   <script src="dashboardsidebar.js"></script>
 </body>
 </html>
