--- a/purchaserequest.html
+++ b/purchaserequest.html
@@ -261,7 +261,7 @@
 <button type="button" class="back-button" onclick="window.location.href='dashboard.html'">Back to Dashboard</button>
 </form>
 </div>
-<script src="script.js"></script>
+<script src="purchase_request_script.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         // Display logged-in user email
