--- a/purchaserequest.html
+++ b/purchaserequest.html
@@ -5,7 +5,7 @@
 <title>Purchase Request Form</title>
     <link rel="icon" type="image/png" href="favicon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="purchase_request_style.css">
 <style>
     body {
         font-family: Arial, sans-serif;
