--- a/purchaserequest.html
+++ b/purchaserequest.html
@@ -181,11 +181,11 @@
 <tr>
 <td>
 <label>Name *</label>
-<input name="name" required="" type="text"/>
+<input name="Name" required="" type="text"/>
 </td>
 <td>
 <label>Department *</label>
-<select name="department" required="" id="department-dropdown">
+<select name="Department" required="" id="department-dropdown">
         <option value="" disabled selected>Loading Departments...</option>
 </select>
 </td>
@@ -193,11 +193,11 @@
 <tr>
 <td>
 <label>Mobile *</label>
-<input max="9999999999" min="1000000000" name="mobile" required="" title="Enter a valid 10-digit number" type="number"/>
+<input max="9999999999" min="1000000000" name="Mobile" required="" title="Enter a valid 10-digit number" type="number"/>
 </td>
 <td>
 <label>Email ID *</label>
-<input id="user-email" name="email" required="" type="email" readonly/>
+<input id="user-email" name="Email" required="" type="email" readonly/>
 </td>
 </tr>
 </table>
@@ -206,11 +206,11 @@
 <tr>
 <td>
 <label>Item Description *</label>
-<input name="item_description" required="" type="text"/>
+<input name="Item" required="" type="text"/>
 </td>
 <td>
 <label>Specification (if any) *</label>
-<input name="specification" required="" type="text"/>
+<input name="Specification" required="" type="text"/>
 </td>
 </tr>
 <tr>
